# screen-eye-tracking

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  pyproject.toml
electron/: externalApi.cjs  externalStore.cjs  externalStore.test.mjs  lipClickController.cjs  lipClickController.test.mjs  main.cjs  preload.cjs
scripts/: dev.cjs  start.cjs
src/screen_eye_tracking/: __init__.py  backend.py
tests/: test_projection.py
web/src/: App.tsx  global.d.ts  logger.ts  styles.css
web/src/inference/: core.test.ts  core.ts  runtimes.ts  webRuntime.ts
